--- a/Presentation.tex
+++ b/Presentation.tex
@@ -122,17 +122,6 @@
 	\hyperlink{frame:Environmental noises 1}{>>} 
 \end{frame}
 
-% frame 3 - skip
-\begin{frame}{Environmental noises}
-	\framesubtitle{Friction}
-	\begin{itemize}
-		\item Friction, caused by drag force, decreases with pressure.		
-		\item At higher pressures (turbulent flow); $F = -b(P)\cdot v^2 $.
-		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
-		
-	\end{itemize}
-	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{>>} 
-\end{frame}
 
 
 % frame 4
@@ -708,7 +697,20 @@
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
-	\hyperlink{frame:Environmental noises}{>>} 
+	\hyperlink{frame:Environmental noises}{<<} 
 \end{frame}
 
 \end{document}
+
+
+% frame 3 - skip
+\begin{frame}{Environmental noises}
+	\framesubtitle{Friction}
+	\begin{itemize}
+		\item Friction, caused by drag force, decreases with pressure.		
+		\item At higher pressures (turbulent flow); $F = -b(P)\cdot v^2 $.
+		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
+		
+	\end{itemize}
+	\hypehyperlink{frame:Environmental noises}{<<} 
+\end{frame}
