--- a/Presentation.tex
+++ b/Presentation.tex
@@ -702,6 +702,20 @@
 \end{frame}
 
 
+% frame 2 - skip
+\begin{frame}{\hypertarget{frame:Environmental noises 2}{Environmental noises}}
+	\framesubtitle{Pressure and temperature dependent noises}
+	\begin{itemize}
+		\item An ideal gas has negligible inter-particle interactions.
+		\item Brownian motion cause random collisions. 
+		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
+		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
+		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
+		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		
+	\end{itemize}
+	\hyperlink{frame:Environmental noises}{<<} 
+\end{frame}
 
 
 
