--- a/Presentation.tex
+++ b/Presentation.tex
@@ -704,14 +704,11 @@
 
 % frame 2 - skip
 \begin{frame}{\hypertarget{frame:Environmental noises 2}{Environmental noises}}
-	\framesubtitle{Pressure and temperature dependent noises}
+	\framesubtitle{Friction}
 	\begin{itemize}
-		\item An ideal gas has negligible inter-particle interactions.
-		\item Brownian motion cause random collisions. 
-		\item The kinetic energy of the gas particles: $ N<E_k> = \frac{3}{2} PV$.
-		\item Acoustic waves are propagating with power of $10^{-22}AP^2$.
-		\item Heat flow is the exchange of thermal energy between physical systems. The net power is: $p= A P c_v \Delta T \sqrt{\frac{M}{RT}} $.
-		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
+		\item Friction, caused by drag force, decreases with pressure.		
+		\item At higher pressures (turbulent flow); $F = -b(P)\cdot v^2 $.
+		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
 	\hyperlink{frame:Environmental noises}{<<} 
