--- a/Presentation.tex
+++ b/Presentation.tex
@@ -135,9 +135,11 @@
 		\item The controller continuously calculates error from set point. 
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
 	\end{itemize}
+	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
 \end{frame}
 % frame 5
-\begin{frame}{PID response}
+\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller 1}{Proportional–integral–derivative (PID) controller}}
+	\framesubtitle{PID response}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
@@ -149,6 +151,7 @@
 		\item The feedback applies an external correction to the process.	
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
+	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{<<} 
 \end{frame}
 % frame 6
 \begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
