--- a/Presentation.tex
+++ b/Presentation.tex
@@ -132,8 +132,8 @@
     \end{center}
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process.
-		\item The controller continuously calculates error from set point. 
-		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
+		\item The control is a weighted sum of proportional, integral and derivative response to error (P-I-D).
+		\item The feedback applies an external correction to the process: $\tau(t)$.	
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
 \end{frame}
@@ -144,11 +144,11 @@
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
 	\begin{itemize}
-	
+		\item The controller continuously calculates error from set point. 
 		\item Each response is modulated by a tunable gain. 
 		\item The output is a weighted sum of the response terms.
 		%\item $u(t) = K_P e(t)+K_I\int_{0}^{t}e(\tau)d\tau+K_D\frac{de(t)}{dt}$
-		\item The feedback applies an external correction to the process.	
+		
 		\item Over time error is minimized (damped motion).
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{<<} 
