--- a/Presentation.tex
+++ b/Presentation.tex
@@ -133,7 +133,7 @@
 	\begin{itemize}	
 		\item PID controller is a feedback based control system, for time continuous control of a process.
 		\item The control is a weighted sum of proportional, integral and derivative response to error (P-I-D).
-		\item The feedback applies an external correction to the process: $\tau(t)$.	
+		\item Feedback applies an external correction to the process: $\tau(t)$.	
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
 \end{frame}
