--- a/Presentation.tex
+++ b/Presentation.tex
@@ -131,7 +131,7 @@
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
 	\begin{itemize}	
-		\item PID controller is a feedback based control system, for time continuous control of a process (damped pendulum motion).
+		\item PID controller is a feedback based control system, for time continuous control of a process (damped motion).
 		\item The control is a weighted sum of proportional, integral and derivative response to error (P-I-D).
 		\item Feedback applies an external correction to the process: $\tau(t)$.	
 	\end{itemize}
