--- a/Presentation.tex
+++ b/Presentation.tex
@@ -153,7 +153,28 @@
 		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
 		
 	\end{itemize}
+	\hyperlink{frame:Radiation tourqe 1}{>>} 
 \end{frame}
+
+\begin{frame}{\hypertarget{frame:Radiation tourqe 1}{Radiation tourqe}}
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{radiation.PNG}
+    \end{center}
+
+	
+	\begin{itemize}		
+		
+		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
+		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
+		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
+		
+	\end{itemize}
+	hyperlink{frame:Radiation tourqe}{<<} 
+\end{frame}
+
+
+
 
 \section{Thesis aims}
 % frame 1
