--- a/Presentation.tex
+++ b/Presentation.tex
@@ -170,7 +170,7 @@
 		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
 		
 	\end{itemize}
-	hyperlink{frame:Radiation tourqe}{<<} 
+	\hyperlink{frame:Radiation tourqe}{<<} 
 \end{frame}
 
 
