--- a/Presentation.tex
+++ b/Presentation.tex
@@ -148,29 +148,11 @@
 	\begin{itemize}		
 		
 		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
-		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
 		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
+		\item Modulation is controlled by the PID feedback.
 		
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
-\end{frame}
-
-\begin{frame}{\hypertarget{frame:Radiation tourqe 1}{Radiation tourqe}}
-	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{radiation.PNG}
-    \end{center}
-
-	
-	\begin{itemize}		
-		
-		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
-		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
-		
-	\end{itemize}
-	\hyperlink{frame:Radiation tourqe}{<<} 
 \end{frame}
 
 
@@ -733,5 +715,23 @@
 	\end{itemize}
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{<<} 
 \end{frame}
+
+
+\begin{frame}{\hypertarget{frame:Radiation tourqe 1}{Radiation tourqe}}
+\framesubtitle{Radiation pressure}
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{radiation.PNG}
+    \end{center}
+
+	
+	\begin{itemize}		
+		
+		\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
+		
+	\end{itemize}
+	\hyperlink{frame:Radiation tourqe}{<<} 
+\end{frame}
+
 
 \end{document}
