--- a/Presentation.tex
+++ b/Presentation.tex
@@ -91,7 +91,7 @@
 \end{frame}
 
 
-% frame 3
+% frame 4
 \begin{frame}{\hypertarget{frame:Cavendish apparatus}{Cavendish apparatus}}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
@@ -115,8 +115,8 @@
 	\begin{itemize}
 		
 		\item Environment gas cause pressure-dependent friction and noises (Brownian motion, acoustic waves, thermal flow).  
-		\item Noise from environmental black body radiation.
-		\item Unknown Magnetic noise from electronics.
+		\item Environmental black body radiation energy.
+		\item Unknown Magnetic noise from the setup electronics.
 		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
@@ -125,7 +125,7 @@
 
 
 
-% frame 4
+% frame 2
 \begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller}{Proportional–integral–derivative (PID) controller}}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
@@ -138,7 +138,7 @@
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller 1}{>>} 
 \end{frame}
 
-% frame 6
+% frame 3
 \begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
 	\begin{center}		
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{radiation.PNG}
@@ -168,7 +168,6 @@
 		
 		\item Angle measurement is optical by a front mirror.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\pause
 		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
 		\item When amplitude is damped under the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 		
