--- a/Presentation.tex
+++ b/Presentation.tex
@@ -160,7 +160,7 @@
 
 \section{Thesis aims}
 % frame 1
-\begin{frame}{Experiment noises}
+\begin{frame}{\hypertarget{frame:Experiment noises}{Experiment noises}}
 	\begin{center}		
 		\includegraphics[width=0.3\textwidth,keepaspectratio]{pendulum_front.png}
     \end{center}
@@ -173,10 +173,10 @@
 		
 		
 	\end{itemize}
-	\hyperlink{frame:Gravimetric measurement}{>>} 
+	\hyperlink{frame:Experiment noises 1}{>>} 
 \end{frame}
 % frame 2 - skip
-\begin{frame}{Experiment noises}
+\begin{frame}{\hypertarget{frame:Experiment noises 1}{Experiment noises}}
 	\begin{itemize}
 		\framesubtitle{Fundamental limits}
 		\item Basic energy level quantum uncertainty: $delta\theta= \sqrt{\frac{\hslash\omega}{2\kappa}} \approx 10^{-16} [rad]$
@@ -184,6 +184,7 @@
 		\item Shot noise limit: $\delta\theta = \frac{1}{4\sqrt{2}\pi}\frac{\lambda}{L\sqrt{N}} \approx 10^{-14} [\frac{rad}{Hz}]$.
 		
 	\end{itemize}
+	\hyperlink{frame:Experiment noises}{<<}
 \end{frame}
 
 \begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
