--- a/Presentation.tex
+++ b/Presentation.tex
@@ -131,7 +131,7 @@
     \end{center}
 	\begin{itemize}
 		
-		\item Angle measurement is optical by a front mirror.
+		\item Tilt angle is measured using a front mirror.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
 		\item When amplitude is damped under the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
