--- a/Presentation.tex
+++ b/Presentation.tex
@@ -133,8 +133,8 @@
 		
 		\item Tilt angle is measured using a front mirror.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
-		\item When amplitude is damped under the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
+		\item Reducing the uncertainty enables higher sensitivity.
+		\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 		
 		
 	\end{itemize}
