--- a/Presentation.tex
+++ b/Presentation.tex
@@ -99,7 +99,7 @@
 	\begin{itemize}
 		\item Apparatus measures the gravitational torque of test mass.
 		\item Mass attracts both masses $m$; creating a net torque.
-		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
+		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 	\end{itemize}
 	\hyperlink{frame:Cavendish apparatus 1}{>>} 
@@ -172,10 +172,6 @@
 \end{frame}
 
 
-
-
-
-
 \begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
 	\begin{center}		
 		\includegraphics[width=0.3\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
@@ -183,7 +179,7 @@
 	\begin{itemize}
 		
 		\pause
-		\item Introducing a new mass adds a constant new torque $\tau_g$. 
+		\item Introducing a new mass adds a constant torque $\tau_g$. 
 		\item The PID is compensating for the new error; response becomes mainly an inverse torque: $\tau_{PID}(t) \approx K_P\theta_g(t)$. 
 		\item When integrating over short periods the gravitational angle is constant: $\overline{\theta}_g =  \frac{\int \tau_{PID}(t) dt}{ K_P \Delta t} $ allowing short integration time.
 		
