--- a/Presentation.tex
+++ b/Presentation.tex
@@ -98,7 +98,7 @@
     \end{center}
 	\begin{itemize}
 		\item Apparatus measures the gravitational torque of test mass.
-		\item Mass attracts both masses $m$; creating a net torque.
+		\item Mass attracts both masses $m$; creating a net torque $\tau_g$.
 		\item The average equilibrium angle: $\overline{\theta}_g = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 	\end{itemize}
