--- a/Presentation.tex
+++ b/Presentation.tex
@@ -180,7 +180,8 @@
 		
 		\item Introducing a new mass adds a constant torque $\tau_g$. 
 		\item The PID is compensating for the new error; response becomes mainly an inverse torque: $\tau_{PID}(t) \approx K_P\theta_g(t)$. 
-		\item When integrating over short periods the gravitational angle is constant: $\overline{\theta}_g =  \frac{\int \tau_{PID}(t) dt}{ K_P \Delta t} $ allowing short integration time.
+		\item When integrating over short periods: $\overline{\theta}_g =  \frac{\int \tau_{PID}(t) dt}{ K_P \Delta t} $. 	
+		\item Measurement with lower uncertainty and short integration time.
 	\end{itemize}
 \end{frame}
 
