--- a/Presentation.tex
+++ b/Presentation.tex
@@ -131,7 +131,7 @@
     \end{center}
 	\begin{itemize}
 		
-		\item Tilt angle is measured using a front mirror.
+		\item Angle is measured using a front mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty enables higher sensitivity.
 		\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
@@ -194,7 +194,7 @@
 	\end{center}
 	\begin{itemize}
 
-		\item The torsional pendulum is placed inside a vacuum chamber, with angle measurement system and a feedback system. 
+		\item Torsional pendulum is placed inside a vacuum chamber. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
 		\item Feedback of two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
 		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
