--- a/Presentation.tex
+++ b/Presentation.tex
@@ -131,7 +131,7 @@
     \end{center}
 	\begin{itemize}
 		
-		\item Angle is measured using a front mirror and quadrant detector.
+		\item Angle is measured using a mirror and quadrant detector.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty enables higher sensitivity.
 		\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
