--- a/Presentation.tex
+++ b/Presentation.tex
@@ -202,22 +202,6 @@
 	\end{itemize}
 	
 \end{frame}
-% frame 2
-\begin{frame}{Setup design}
-	\begin{center}		
-			\includegraphics[width=0.45\textwidth,keepaspectratio]{total_chamber.png}
-	\end{center}
-	\begin{itemize}
-
-		\item The design was carried out using the software Solid Works.
-		\item Pendulum was manufactured by the university workshop.
-		\item Assembling and the experiments were performed at the lab.
-		\item Chosen materials minimize magnetic noise and outgassing.
-	
-	\end{itemize}
-	
-\end{frame}
-
 
 % frame 3
 \begin{frame}{Vacuum chamber}
@@ -227,13 +211,11 @@
 	\begin{itemize}
 
 		\item Transparent windows with light guides.
-		\pause
+		\item Chosen materials minimize magnetic noise and outgassing.
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
-		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
 		
-	\end{itemize}
-	
+	\end{itemize}	
 \end{frame}
 
 
@@ -243,10 +225,8 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{pendulum_front_names.png}
 	\end{center}
 	\begin{itemize}
-
-		\item Rod, string, two masses, front mirror and a balancing mass.
-		\pause
 		\item Held by an adjustable mount; for accurate location. 
+		\item Front mirror stabilized by a balancing mass.		
 		\item Chosen dimensions aim achieving small $\kappa$ with large $T$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
