--- a/Presentation.tex
+++ b/Presentation.tex
@@ -195,8 +195,8 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
-		\item Feedback of two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
+		\item Transparent windows with light guides.
+		\item Two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
 		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
 	
 	\end{itemize}
@@ -210,7 +210,6 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Transparent windows with light guides.
 		\item Chosen materials minimize magnetic noise and outgassing.
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
