--- a/Presentation.tex
+++ b/Presentation.tex
@@ -196,8 +196,8 @@
 
 		\item Torsional pendulum is placed inside a vacuum chamber. 
 		\item Transparent windows with light guides.
-		\item pid modulates two LED light sources in real time, by an Arduino controller; controlled by the PID loop.
-		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
+		\item PID modulates two LED light sources in real time.
+		\item LED are driven by Arduino controller; using PWM.
 	
 	\end{itemize}
 	
