--- a/Presentation.tex
+++ b/Presentation.tex
@@ -210,9 +210,10 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Chosen materials minimize magnetic noise and outgassing.
 		\item Measurements conducted with vacuum engine off.
-		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
+		\item Maintenance of low pressure; leakage and the outgassing (surface).
+		\item Chosen materials minimize magnetic noise and outgassing.
+
 		
 	\end{itemize}	
 \end{frame}
