--- a/Presentation.tex
+++ b/Presentation.tex
@@ -211,7 +211,7 @@
 	\begin{itemize}
 
 		\item Measurements conducted with vacuum engine off.
-		\item Maintenance of low pressure; leakage and the outgassing (surface).
+		\item Maintenance of low pressure; leakage, outgassing.
 		\item Chosen materials minimize magnetic noise and outgassing.
 
 		
