--- a/Presentation.tex
+++ b/Presentation.tex
@@ -261,38 +261,21 @@
 		
 		\item Mainly acts as friction, gradually slowing velocity.
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
-		\pause
 		\item If torque too small compared to amplitude; negligible damping affect with infinite damping time. 
 		
 	\end{itemize}
 \end{frame}
 
 
-
-
-
-\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
-	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
-	\end{center}
-	\begin{itemize}		
-		\item PID damping torque; a modulated radiation torque.
-		\item Vacuum chamber is with transparent windows in front.
-		\item Torque controlled by changing the sources' flux difference.
-		
-	\end{itemize}
-\end{frame}
-
-
-\begin{frame}{Laser setup}
+\begin{frame}{Previous laser setup}
 	\begin{center}		
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
-		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
+		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
 		\item Range of $10000$ steps with frequency of $1 [Hz]$.
-		\item Minimized difference uncertainty; mutual source.
-		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
+		\item Difference uncertainty minimized; mutual source.
+		\item Output uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
 	\end{itemize}
 \end{frame}
 
