--- a/Presentation.tex
+++ b/Presentation.tex
@@ -275,7 +275,7 @@
 		\item Laser coupled in series into two acousto optic modulators; divided into two controlled beams.
 		\item Range of $10000$ steps with frequency of $1 [Hz]$.
 		\item Difference uncertainty minimized; mutual source.
-		\item Output uncertainty large; non linearity AOM response and power fluctuations.
+		\item Output uncertainty large; AOM non linearity, power fluctuations.
 	\end{itemize}
 \end{frame}
 
