--- a/Presentation.tex
+++ b/Presentation.tex
@@ -305,15 +305,16 @@
 \end{frame}
 
 
-\begin{frame}{Driving circuit}
+\begin{frame}{LED PWM circuit}
 	\begin{center}		
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		\item High power blue LED modulated by PWM pins.
-		\item Net tourqe: $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $
-		\item Response approximately linear; minimizing overshoot.
-		\item Fast PWM frequency minimizes the phase delay.
+		
+		\item Linear response minimizes overshoot; $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $.
+		\item PWM frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
+		\item Illumination angle of $45^0-120^0$ making it hard to focus.
+		\item The LED light sources are coupled into light guides.
 		
 	\end{itemize}
 \end{frame}
