--- a/Presentation.tex
+++ b/Presentation.tex
@@ -312,9 +312,9 @@
 	\begin{itemize}		
 		
 		\item Linear response minimizes overshoot; $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $.
-		\item PWM frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
+		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
 		\item Illumination angle of $45^0-120^0$ making it hard to focus.
-		\item The LED light sources are coupled into light guides.
+		\item LED coupled into a light guide (FOV of $45^0-120^0$).
 		
 	\end{itemize}
 \end{frame}
