--- a/Presentation.tex
+++ b/Presentation.tex
@@ -310,11 +310,11 @@
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		
-		\item Linear response minimizes overshoot; $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $.
+		\item LED coupled into a light guide (FOV of $45^0-120^0$).
+		\item Linear response minimizes overshoot; $\tau(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $.
 		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
 		\item Illumination angle of $45^0-120^0$ making it hard to focus.
-		\item LED coupled into a light guide (FOV of $45^0-120^0$).
+		
 		
 	\end{itemize}
 \end{frame}
