--- a/Presentation.tex
+++ b/Presentation.tex
@@ -311,9 +311,8 @@
 	\end{center}
 	\begin{itemize}		
 		\item LED coupled into a light guide (FOV of $45^0-120^0$).
-		\item Linear response minimizes overshoot; $\tau(t)  \propto (D_1(t) -D_2(t)) $.
+		\item Linear response minimizes overshoot; $\tau(t)  \propto [D_1(t) -D_2(t)] $.
 		\item Fast frequency minimizes phase delay; $f_{PWM} \approx 500[Hz]$.
-		\item Illumination angle of $45^0-120^0$ making it hard to focus.
 		
 		
 	\end{itemize}
