--- a/Presentation.tex
+++ b/Presentation.tex
@@ -293,19 +293,6 @@
 	\hyperlink{frame:LED PWM circuit 1}{>>} 
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:LED PWM circuit 1}{LED PWM circuit}}
-	framesubtitle{Arduino microcontroller}
-	\begin{center}		
-		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
-	\end{center}
-	\begin{itemize}		
-		\item Inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
-		\item Fast switching of digital signal results with analog signal.
-		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
-		\item Modulation limited by clock frequency: $f_{PWM} \approx 500[Hz]$.
-	\end{itemize}
-	\hyperlink{frame:LED PWM circuit}{<<} 
-\end{frame}
 
 
 
@@ -682,4 +669,18 @@
 	\hyperlink{frame:Experiment noises}{<<}
 \end{frame}
 
+
+\begin{frame}{\hypertarget{frame:LED PWM circuit 1}{LED PWM circuit}}
+	\framesubtitle{Arduino microcontroller}
+	\begin{center}		
+		\includegraphics[width=0.55\textwidth,keepaspectratio]{duty_cycle.png}
+	\end{center}
+	\begin{itemize}		
+		\item Inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
+		\item Fast switching of digital signal results with analog signal.
+		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
+		\item Modulation limited by clock frequency: $f_{PWM} \approx 500[Hz]$.
+	\end{itemize}
+	\hyperlink{frame:LED PWM circuit}{<<} 
+\end{frame}
 \end{document}
