--- a/Presentation.tex
+++ b/Presentation.tex
@@ -332,9 +332,8 @@
 	\hyperlink{frame:Quality factor 1}{>>} 
 \end{frame}
 
+\begin{frame}{\hypertarget{frame:Effective noise}{Effective noise}}
 
-\begin{frame}{Effective noise}
-	
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
@@ -342,20 +341,23 @@
 		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 					
 	\end{itemize}
+	\hyperlink{frame:Effective noise 1}{>>} 
+
 \end{frame}
 
-\begin{frame}{Effective noise}
+\begin{frame}{\hypertarget{frame:Effective noise 1}{Effective noise}}
 	\framesubtitle{Calculated noises}
 	\begin{itemize}	
 		\item Thermal flow: $p=0.083[W]$.
 		\item Black body radiation: $p=0.121[W]$.
 		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
-		\pause
-		\item Estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
+		\item New estimated noise: $p=1\cdot 10^{-19} - 7\cdot 10^{-19}[W]$.
 					
 	\end{itemize}
+	\hyperlink{frame:Effective noise}{<<} 
 \end{frame}
+
 \begin{frame}{Damping limit}
 	
 	\begin{itemize}	 
