--- a/Presentation.tex
+++ b/Presentation.tex
@@ -370,7 +370,6 @@
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\item Design a torsional pendulum with active motion damping. 
-		\pause
 		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
 		%\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
 		
@@ -383,7 +382,6 @@
 		
 		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
-		\pause
 		\item PID not the best control algorithm; linear approximation. 
 		\item Next stage would have non linear motion approximation.
 		\item Goal of damping beyond room temperature uncertainty. 
@@ -527,8 +525,8 @@
 
 
 
+\section{Appendix}
 
-%appendix
 % frame 2
 \begin{frame}{\hypertarget{frame:Damped oscillator}{Damped oscillator}}
 
