--- a/Presentation.tex
+++ b/Presentation.tex
@@ -83,7 +83,7 @@
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\item Undamped oscillator; harmonic oscillations without decay.
-		\item If there is a damping torque $\tau = -b\dot{\theta}$; underdamped, critically damped and overdamped.
+		\item If there is a damping torque $\tau = -b\dot{\theta}$; damped motion.
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 		
 	\end{itemize}
