--- a/Presentation.tex
+++ b/Presentation.tex
@@ -255,7 +255,7 @@
 
 \begin{frame}{Damped oscillator}
 	\begin{center}		
-		\includegraphics[width=0.5\textwidth,keepaspectratio]{damp.png}
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{underdamp.png}
 	\end{center}
 	\begin{itemize}		
 		
