--- a/Presentation.tex
+++ b/Presentation.tex
@@ -260,7 +260,7 @@
 		\item When PID tuned correct; critical damping of process.
 		\item Mainly acts as friction, gradually slowing velocity.
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
-		\item Torque too small compared to amplitude; negligible damping. 
+		\item Torque small compared to amplitude; negligible damping. 
 		
 	\end{itemize}
 \end{frame}
