--- a/Presentation.tex
+++ b/Presentation.tex
@@ -170,7 +170,19 @@
 	\end{itemize}
 	\hyperlink{frame:Radiation tourqe 1}{>>} 
 \end{frame}
-
+\begin{frame}{Damped oscillator}
+	\begin{center}		
+		\includegraphics[width=0.65\textwidth,keepaspectratio]{underdamp.png}
+	\end{center}
+	\begin{itemize}		
+		\item PID mainly acts as friction, gradually slowing velocity.
+		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
+		\item When PID tuned correct; critical damping of process.
+		\item Overshoot or slow response; result with driven oscillator.
+		\item Torque small compared to amplitude; negligible damping. 
+		
+	\end{itemize}
+\end{frame}
 
 \begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
 	\begin{center}		
@@ -188,20 +200,7 @@
 \section{Methods and results}
 \subsection{System structure}
 % frame 1
-\begin{frame}{Experiment setup}
-	\begin{center}		
-			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
-	\end{center}
-	\begin{itemize}
 
-		\item Torsional pendulum is placed inside a vacuum chamber. 
-		\item Transparent windows with light guides.
-		\item PID modulates two LED light sources in real time.
-		\item LED are driven by Arduino controller; using PWM.
-	
-	\end{itemize}
-	
-\end{frame}
 
 % frame 3
 \begin{frame}{Vacuum chamber}
@@ -209,7 +208,7 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
 	\end{center}
 	\begin{itemize}
-
+		\item Transparent windows with light guides.
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage, outgassing.
 		\item Chosen materials minimize magnetic noise and outgassing.
@@ -233,7 +232,20 @@
 	
 \end{frame}
 
+\begin{frame}{Experiment setup}
+	\begin{center}		
+			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
+	\end{center}
+	\begin{itemize}
 
+		\item Torsional pendulum is placed inside a vacuum chamber. 
+		\item 
+		\item PID modulates two LED light sources in real time.
+		\item LED are driven by Arduino controller; using PWM.
+	
+	\end{itemize}
+	
+\end{frame}
 \subsection{Proportional–Integral–Derivative (PID) controller}
 % frame 1
 
@@ -252,19 +264,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Damped oscillator}
-	\begin{center}		
-		\includegraphics[width=0.65\textwidth,keepaspectratio]{underdamp.png}
-	\end{center}
-	\begin{itemize}		
-		\item Mainly acts as friction, gradually slowing velocity.
-		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
-		\item When PID tuned correct; critical damping of process.
-		\item Overshoot or slow response; result with driven oscillator.
-		\item Torque small compared to amplitude; negligible damping. 
-		
-	\end{itemize}
-\end{frame}
+
 
 
 \begin{frame}{Previous laser setup}
