--- a/Presentation.tex
+++ b/Presentation.tex
@@ -309,6 +309,10 @@
 \end{frame}
 
 \begin{frame}{\hypertarget{frame:Effective noise}{Effective noise}}
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{random_motion1.jpg}
+	\end{center}
+
 
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
