--- a/Presentation.tex
+++ b/Presentation.tex
@@ -64,7 +64,9 @@
 
 % frame 2
 \begin{frame}{Previous achievements}
-	
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{kasevich.png}
+	\end{center}
 	\begin{itemize}
 
 		\item Interference fringe changes with sensitivity of 100 nano-g $Hz^{-1/2}$.
