--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,9 +69,9 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Interference fringe changes with sensitivity of 100 nano-g $Hz^{-1/2}$.
-		\item Atomic interferometry with sensitivity of of 100 pico-g after two days of integration.
-		\item Atom interferometer with sensitivity of 500 femto-g after one hour of integration.
+		\item Interference fringe changes; sensitivity of 100 nano-g $Hz^{-1/2}$.
+		\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
+		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
 		
 	\end{itemize}
 \end{frame}
