--- a/Presentation.tex
+++ b/Presentation.tex
@@ -69,7 +69,7 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Interference fringe changes; sensitivity of 100 $/frac{nano-g}{\sqrt{Hz}}$.
+		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
 		\item Atomic interferometry; sensitivity of of $100 pico-g$ after two days of integration.
 		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
 		
