--- a/Presentation.tex
+++ b/Presentation.tex
@@ -70,7 +70,7 @@
 	\begin{itemize}
 
 		\item Interference fringe changes; sensitivity of 100 $\frac{nano-g}{\sqrt{Hz}}$.
-		\item Atomic interferometry; sensitivity of of $100 pico-g$ after two days of integration.
+		\item Atomic interferometry; sensitivity of of 100 pico-g after two days of integration.
 		\item Atom interferometer; sensitivity of 500 femto-g after one hour of integration.
 		
 	\end{itemize}
