--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,8 +331,8 @@
 \begin{frame}{Damping limit}
 	
 	\begin{itemize}	 
-		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$.
-		\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
+		\item Damping is limited by Brownian motion, allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
+		%\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
 		\item That is achieved when damping process lowers the pendulum's temperature.  				
 	\end{itemize}
 \end{frame}
