--- a/Presentation.tex
+++ b/Presentation.tex
@@ -333,7 +333,7 @@
 	\begin{itemize}	 
 		\item Damping is limited by Brownian motion, allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
 		%\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
-		\item That is achieved when damping process lowers the pendulum's temperature.  				
+		\item That is achieved when damping process lowers the pendulum's temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
 	\end{itemize}
 \end{frame}
 \begin{frame}{Measurement resolution}
