--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,7 +331,8 @@
 \begin{frame}{Damping limit}
 	
 	\begin{itemize}	 
-		\item Damping is limited by Brownian motion, allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
+		\item Amplitude is limited by Brownian motion uncertainty.
+		\item Allowing PID damping process to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
 		%\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
 		\item That is achieved when damping process lowers the pendulum's temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
 	\end{itemize}
