--- a/Presentation.tex
+++ b/Presentation.tex
@@ -332,7 +332,7 @@
 	
 	\begin{itemize}	 
 		\item Amplitude is limited by Brownian motion uncertainty.
-		\item Allowing PID damping process to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
+		\item Allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
 		%\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
 		\item That is achieved when damping process lowers the pendulum's temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
 	\end{itemize}
