--- a/Presentation.tex
+++ b/Presentation.tex
@@ -333,8 +333,8 @@
 	\begin{itemize}	 
 		\item Amplitude is limited by Brownian motion uncertainty.
 		\item Allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
-		%\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
-		\item Achieved when damping process lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
+		%\item Damping process can damp down up to $\delta\theta^{PID}\approx 2\cdot 10^{-14}$
+		\item Achieved when damping lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
 	\end{itemize}
 \end{frame}
 \begin{frame}{Measurement resolution}
