--- a/Presentation.tex
+++ b/Presentation.tex
@@ -312,7 +312,7 @@
 
 \begin{frame}{\hypertarget{frame:Effective noise}{Effective noise}}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{random_motion1.jpg}
+		\includegraphics[width=0.25\textwidth,keepaspectratio]{random_motion1.jpg}
 	\end{center}
 
 
@@ -334,7 +334,7 @@
 		\item Amplitude is limited by Brownian motion uncertainty.
 		\item Allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
 		%\item Damping process can damp down up to $\delta\theta^{PID}\approx 2\cdot 10^{-14}$
-		\item Achieved when damping lowers the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
+		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
 	\end{itemize}
 \end{frame}
 \begin{frame}{Measurement resolution}
