--- a/Presentation.tex
+++ b/Presentation.tex
@@ -137,7 +137,8 @@
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\item Reducing the uncertainty enables higher sensitivity.
 		\item When amplitude is damped under the thermal limit, pendulum's temperature is effectively lowered; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		
+		\item Damping lowers the measurement temperature quantum uncertainty.
+
 		
 	\end{itemize}
 	\hyperlink{frame:Experiment noises 1}{>>} 
@@ -328,23 +329,17 @@
 \end{frame}
 
 
-\begin{frame}{Damping limit}
+\begin{frame}{Resolution limit}
 	
 	\begin{itemize}	 
 		\item Amplitude is limited by Brownian motion uncertainty.
 		\item Allowing to damp down to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$.
-		%\item Damping process can damp down up to $\delta\theta^{PID}\approx 2\cdot 10^{-14}$
-		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 				
-	\end{itemize}
-\end{frame}
-\begin{frame}{Measurement resolution}
-	
-	\begin{itemize}	 
-		\item Gravimetric measurement is conducted by measuring the equilibrium angle.
-		\item Damping lowers the measurement temperature quantum uncertainty.
+		\item Achieved if damping lowers temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$.
 		\item Resolution limit is proportional to the damped amplitude. 				
+				
 	\end{itemize}
 \end{frame}
+
 
 \section{Summary and conclusion}
 \begin{frame}{Study achievements}
