--- a/Presentation.tex
+++ b/Presentation.tex
@@ -342,22 +342,12 @@
 
 
 \section{Summary and conclusion}
-\begin{frame}{Study achievements}
-	\begin{itemize}
-		
-		
-		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
-		\item Design a torsional pendulum with active motion damping. 
-		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
-		%\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
-		
-		
-	\end{itemize}
-\end{frame}
+
 
 \begin{frame}{Study contribution}
 	\begin{itemize}
-		
+		\item Improving sensitivity and integration time using active motion damping.
+
 		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\item PID not the best control algorithm; linear approximation. 
