--- a/Presentation.tex
+++ b/Presentation.tex
@@ -342,7 +342,17 @@
 
 
 \section{Summary and conclusion}
-
+\begin{frame}{Study achievements}
+	\begin{itemize}
+		
+		
+		\item Design a torsional pendulum with active motion damping. 
+		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
+		%\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
+		
+		
+	\end{itemize}
+\end{frame}
 
 \begin{frame}{Study contribution}
 	\begin{itemize}
@@ -356,8 +366,13 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Closing}
+	\centering
+	Thank you for your time. \\[12pt]
+	
+\end{frame}
 
-
+\iffalse
 
 \subsection[Basic Problem]{The basic problem that we have studed}
 
@@ -487,7 +502,7 @@
 \oldstylenums{2000}.
 	\end{thebibliography}
 \end{frame}
-
+\fi
 
 
 
