--- a/Presentation.tex
+++ b/Presentation.tex
@@ -33,9 +33,9 @@
     %\author
 		\author[Yishai Arieli]{Yishai Arieli}
 	% supervisor	
-		\supervisor{Supervisor}{Professor Howell}
+		\supervisor{Supervisor}{Professor John Howell}
 	% date
-		\presentationDate{October 22, 2021}
+		\presentationDate{March, 2021}
 
 
 \begin{document}
@@ -85,7 +85,7 @@
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\item Undamped oscillator; harmonic oscillations without decay.
-		\item If there is a damping torque $\tau = -b\dot{\theta}$; damped motion.
+		\item Damped oscillator; there is a damping torque $\tau = -b\dot{\theta}$.
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 		
 	\end{itemize}
@@ -127,9 +127,9 @@
 
 
 % frame 1
-\begin{frame}{\hypertarget{frame:Experiment noises}{Experiment noises}}
+\begin{frame}{\hypertarget{frame:Measurement uncertainty}{Measurement uncertainty}}
 	\begin{center}		
-		\includegraphics[width=0.3\textwidth,keepaspectratio]{pendulum_front.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{pendulum_front.png}
     \end{center}
 	\begin{itemize}
 		
@@ -141,7 +141,7 @@
 
 		
 	\end{itemize}
-	\hyperlink{frame:Experiment noises 1}{>>} 
+	\hyperlink{frame:Measurement uncertainty 1}{>>} 
 \end{frame}
 
 % frame 2
@@ -629,7 +629,7 @@
 \end{frame}
 
 % frame 2 - skip
-\begin{frame}{\hypertarget{frame:Experiment noises 1}{Experiment noises}}
+\begin{frame}{\hypertarget{frame:Measurement uncertainty 1}{Measurement uncertainty}}
 	\begin{itemize}
 		\framesubtitle{Fundamental limits}
 		\item Basic energy level quantum uncertainty: $delta\theta= \sqrt{\frac{\hslash\omega}{2\kappa}} \approx 10^{-16} [rad]$
@@ -637,7 +637,7 @@
 		\item Shot noise limit: $\delta\theta = \frac{1}{4\sqrt{2}\pi}\frac{\lambda}{L\sqrt{N}} \approx 10^{-14} [\frac{rad}{Hz}]$.
 		
 	\end{itemize}
-	\hyperlink{frame:Experiment noises}{<<}
+	\hyperlink{frame:Measurement uncertainty}{<<}
 \end{frame}
 
 
